feat: footer 구현

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,3 +33,9 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: 'KOTRA_GOTHIC';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/KOTRA_GOTHIC.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
