fix: search-bar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   font-family: 'Pretendard-Regular';
+  transition: 0.3s all;
 }
 
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
@@ -35,7 +36,8 @@ body {
 }
 @font-face {
   font-family: 'KOTRA_GOTHIC';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/KOTRA_GOTHIC.woff') format('woff');
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/KOTRA_GOTHIC.woff')
+    format('woff');
   font-weight: normal;
   font-style: normal;
 }
